[package]
name = "mp-snake-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.14"
futures-lite = "1.13.0"
serde = { version = "1.0.175", features = ["derive", "rc"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tungstenite = "0.20.0"
